# fraud-detection-galsen

./: .gitignore  README.md  pyproject.toml  requirements.txt
fraudetect/: __init__.py  config.py  dataset.py  detectors.py  features.py  helpers.py  plots.py  sampling.py
fraudetect/modeling/: models.py  train.py  utils.py
fraudetect/preprocessing/: __init__.py  preprocessing.py  utils.py
notebooks/: EDA.ipynb  Training-Inference.ipynb  data_exploration.ows  data_synthesis.ipynb  test.ipynb
tools/: demo.py  hyp_search_conf.py  hypsearch  hypsearch.sql  inference.py  model_selection.py
tools/catboost_info/: catboost_training.json
