[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraudetect"
version = "0.0.1"
description = "This is a data science project"
authors = [
  { name = "Delcaux Consulting" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"
dependencies = [
    "numpy>=2.2.4",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["fraudetect"]
force-sort-within-sections = true
