[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraudetect"
version = "0.0.1"
description = "This is a data science project"
authors = [
  { name = "Delcaux Consulting" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "optuna>=4.3.0",
    "optuna-integration>=4.3.0",
    "pyod>=2.0.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "skorch>=1.1.0",
    "spyder-kernels==3.0.*",
    "torch>=2.6.0",
    "torchao>=0.10.0",
    "torchtune>=0.6.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "xgboost>=3.0.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["fraudetect"]
force-sort-within-sections = true
